# GG-helper

./: .env.example  .gitignore  README.md  findings.md  progress.md  pyproject.toml  task_plan.md
benchmarks/: coding_tasks.json
desktop/: README.md  index.html  package-lock.json  package.json
docs/: poppy-desktop.md
examples/mini-poppy/: pyproject.toml
examples/mini-poppy/mini_poppy/: __init__.py  cli.py  context_manager.py  providers.py  runtime.py  workspace.py
examples/mini-poppy/tests/: test_agent_loop.py  test_contract.py  test_tools.py
pico/: __init__.py  agent_loop.py  prompt_prefix.py  runtime.py  task_state.py  tool_context.py  tools.py
poppy/: __init__.py  cli.py  context_manager.py  legacy_migration.py  prompt_prefix.py  runtime.py  tool_context.py  tool_executor.py  tools.py  workspace.py
scripts/: benchmark_knowledge_vectors.py  build_desktop_sidecar.sh  collect_resume_metrics.py  evaluate_knowledge_retrieval.py  pico_gateway_sidecar.py  poppy_gateway_sidecar.py  poppy_ocr.m  poppy_semantic.m  render_cli_screenshots.py  run_large_scale_experiments.py  run_provider_experiments.py  sign_poppy_app.sh
tests/: test_agent_loop.py  test_allowed_tools.py  test_application_runtime.py  test_assistant_service.py  test_brand_identity.py  test_brand_migration.py  test_checkpoint.py  test_context_manager.py  test_desktop_gateway.py  test_document_reliability.py  test_evaluator.py  test_feishu_cloud.py  test_feishu_integration.py  test_memory.py  test_metrics.py  test_personal_knowledge_base.py  test_phase2_personal_assistant.py  test_poppy.py  (+9 more)
(+65 files in other folders)
