[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poppy"
version = "0.1.0"
description = "Poppy local-first desktop assistant and coding agent"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.116,<1",
  "lark-channel-sdk==1.1.0",
  "markitdown[docx,pdf,pptx,xls,xlsx]>=0.1.6",
  "uvicorn[standard]>=0.35,<1",
  "watchdog>=6,<7",
]

[project.scripts]
poppy = "poppy.cli:main"

[dependency-groups]
dev = [
  "httpx2>=2.5,<3",
  "pyinstaller>=6.21.0",
  "pytest>=8.3.5",
  "ruff>=0.4.4",
]

[tool.setuptools.packages.find]
include = ["poppy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
